Fix layout overflow in iPad landscape devices, because of the sidebar

--- a/less/sidebar.less
+++ b/less/sidebar.less
@@ -19,10 +19,15 @@
 
 @media screen and ( max-width: 1200px ) {
   .sidebar {
-    &_enhance {
-      margin-right: -5rem;
-      max-width: 21rem;
-    }
+    margin-right: -5rem;
+    max-width: 21rem;
+  }
+}
+
+/* iPad */
+@media only screen and ( min-device-width: 768px ) and ( max-device-width: 1024px ) and ( orientation: landscape ) {
+  .sidebar {
+    margin-right: -9rem;
   }
 }
 
